2009-07-09  Murray Cumming  <murrayc@murrayc.com>

	Import: " is the only quote character, as per the CSV RFC.

	* glom/dialog_import_csv.cc: advance_field(): Parse only " as 
	start/end quotes, not ', as per the CSV RFC.

	Part of Ubuntu bug 
	https://bugs.launchpad.net/ubuntu/+source/glom/+bug/394894
	(elmergato)

2009-07-08  Murray Cumming  <murrayc@murrayc.com>

	Correct the export to use the CSV format as per the RFC "specification".

	* glom/frame_glom.cc: export_data_to_stream(): For text fields, add 
	" as per the CSV RFC.
	* glom/libglom/data_structure/field.cc: to_file_format(): Escape 
	" as "". Note that we do not try to escape newlines. This is per the 
	CSV RFC.
	* glom/libglom/utils.cc: string_replace(): In the loop, do not check 
	what has already been processed, to avoid an infinite loop.

	Ubuntu bug https://bugs.launchpad.net/ubuntu/+source/glom/+bug/394894
	(elmergato)

2009-07-07  Murray Cumming  <murrayc@murrayc.com>

	Catch libgda meta-store exceptions.
 
	* glom/base_db.cc: get_table_names_from_database():
	* glom/libglom/connectionpool.cc: connect(): Added try/catch around 
	calls to Gda::Connection::update_meta_store_*() because they now 
	throw a MetaStoreError exception, though we do not know why yet.

2009-07-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/dialog_existing_or_new.h: #include config.h to avoid a crash 
	with the client-only build due to ABI code-size confusion.

2009-07-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc: init_menus_file(): Initialize 
	m_toggleaction_network_shared to avoid a crash.

2009-07-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc:
	* glom/bakery/app_withdoc_gtk.[h|cc]: Remove the toolbar widget because 
	we hide it anyway.

2009-07-05  Murray Cumming  <murrayc@murrayc-x61>

	* glom/application.cc: update_network_shared_ui(): Un-ifndef this for 
	client-only.

2009-07-05  Murray Cumming  <murrayc@murrayc.com>
